# tmf-spec-parser

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NEXT_STEPS_v0.3.0.md  README.md  commit_msg.txt  diagnose.py  patch_appjsx.py  patch_repos.py  pyproject.toml  tmf_data.json
.github/workflows/: ci.yml
docs/: ADR-001-odac-source-and-schema.md
tests/: __init__.py  conftest.py  test_config.py  test_differ.py  test_emitter.py  test_extractor.py  test_extractor_lifecycle_isolation.py  test_oda_emitter.py  test_oda_extractor.py  test_oda_extractor_framework.py
tmf_spec_parser/: __init__.py  _cli_show_imports.py  cli.py  config.py  differ.py  emitter.py  extractor.py  fetcher.py  oda_emitter.py  oda_extractor.py  oda_fetcher.py
